MOB360 UAT 20161020/src/objects/Route__c.object
<CustomObject>
    <description>Routes</description>
    <fields>
        <fullName>CustomFlg__c</fullName>
        <description>CustomFlg</description>
        <label>CustomFlg</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeleteFlg__c</fullName>
        <description>DeleteFlg</description>
        <label>DeleteFlg</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndOrderNbr__c</fullName>
        <description>EndOrderNbr</description>
        <label>EndOrderNbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastUpdateDateTime__c</fullName>
        <description>LastUpdateDateTime</description>
        <label>LastUpdateDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocationKey__c</fullName>
        <description>LocationKey</description>
        <label>LocationKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MerchandiserFlg__c</fullName>
        <description>MerchandiserFlg</description>
        <label>MerchandiserFlg</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PerfDashFlg__c</fullName>
        <description>PerfDashFlg</description>
        <label>PerfDashFlg</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PocketSyncModel__c</fullName>
        <description>PocketSyncModel</description>
        <label>PocketSyncModel</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RouteDescr__c</fullName>
        <description>RouteDescr</description>
        <label>RouteDescr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RouteKey__c</fullName>
        <description>RouteKey</description>
        <label>RouteKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RouteNbr__c</fullName>
        <description>RouteNbr</description>
        <label>RouteNbr</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RouteTypeKey__c</fullName>
        <description>RouteTypeKey</description>
        <label>RouteTypeKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RowSource__c</fullName>
        <description>RowSource</description>
        <label>RowSource</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RtlPortalFlg__c</fullName>
        <description>RtlPortalFlg</description>
        <label>RtlPortalFlg</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartOrderNbr__c</fullName>
        <description>StartOrderNbr</description>
        <label>StartOrderNbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WSLRNbrRouteNbr__c</fullName>
        <externalId>true</externalId>
        <label>WSLRNbrRouteNbr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Route</label>
    <nameField>
        <label>Routes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>